# ollama-wsock-connector

./: Cargo.toml  README.md  config.example.toml
.github/workflows/: release.yml
examples/: server.rs
src/: config.rs  main.rs  ollama.rs  protocol.rs  session.rs
