[package]
name = "ollama-wsock-connector"
version = "0.1.0"
edition = "2021"
description = "Rust client that bridges a remote WebSocket server to a local Ollama instance"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "signal", "time", "net", "io-util"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
bytes = "1"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
toml = "0.8"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
